tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_37.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := (~ (((1223 - 200) - (1223 DIV 1)) < ((- 200) * (x DIV x))));
               q := ((((2 DIV x) DIV (x DIV y)) MOD ((1 DIV 2) * (- z))) <= (((y * 2) DIV (z - y)) MOD ((0 MOD 1) * (2 DIV 2))));
               q := (~ (((y > y) & (z = 200)) OR ((x # 2) & (~ p))));
               r := (((+ (200 DIV 2)) DIV ((z MOD 1223) - (2 + 1223))) > ((- (x - 200)) MOD (+ (0 MOD 1223))));
               z := (+ (+ ((- 1223) + (1 DIV 200))));
               x := (+ (- (- (1223 - 1223))));
  (* error *)  q := ((((+ r) DIV (+ 2)) - (+ (0 + x))) # (+ (+ (y + 1))));
               q := ((+ ((x - 0) * (- y))) > (((+ 2) * (z DIV 0)) * (+ (1 - y))));
               z := ((((0 MOD 1) + (y MOD 0)) - ((x MOD y) DIV (0 + 1223))) + (((- y) + (x MOD z)) + ((2 * x) * (z MOD 0))));
               y := ((((+ z) MOD (+ y)) * ((2 MOD y) - (2 * 2))) MOD (+ (- (2 - 2))))
END Test17.